--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,7 @@
 #root {
     width: 100vw;
     height: 100vh;
-    background-color: lightblue;
+    background-color: lightgray;
     display: flex;
     justify-content: center;
 }
