--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@
   box-sizing: border-box;
 }
 
-.app {
-  /* display: flex;
-  flex-direction: row;
-  justify-content: center; */
+.App {
+  width: 680px;
+  background-color: #ffffff;
 }
 .title {
-  margin-bottom: 100px;
+  margin-bottom: 80px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
 }
