--- a/src/Components/List.css
+++ b/src/Components/List.css
@@ -1,23 +1,130 @@
+
+* {
+    border-collapse: collapse;
+    line-height: 1.42;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
 .table {
     /* border: 1px black solid; */
-    border-collapse: collapse;
+    width: 100%;
 }
-th, td {
+.table-head {
+    height: 47px;
+    text-align: left;
+    color: #646464;
+    font-size: 13px;
+    
+}
+th {
+    border: 1px #cfcfcf solid;
+    padding-left: 10px;
+    font-weight: normal;
+    
+}
+.head-check {
+    /* display: block; */
+    padding-left: 16px;
+    /* float: right; */
+    width: 120px;
+
+}
+.tab-check {
+    float: left;
+    display: block;
+    /* display: flex;
+    flex-wrap: wrap; */
+    /* justify-content: flex-start; */
+    /* margin-left: 38px; */
+    margin-left: 21px;
+}
+.table-row {
+    border-top: 1px #cfcfcf solid;
+    border-bottom: 1px #cfcfcf solid;
+    height: 25px;
+    color: #000000;
+    font-size: 12px;
+    font-weight: 500;
+}
+.table-cell {
+    padding-left: 10px;
+}
+.table-price {
+    text-align: center;
+    padding-left: 0;
+}
+.table-check {
+    display: flex;
+    margin-left: 33px;
+    /* justify-content: center; */
+    padding-top: 5px;
+    padding-left: 0;
+
+}
+/* td {
     border: 1px black solid;
     padding: 10px;
+} */
+.tab-block {
+    position: relative;
+    width: 100%;
+}
+.table-block {
+    position: absolute;
+    /* transform: translate(50%, 50%); */
+    top: -10px;
+    left: -10px;
+    width: 6px;
+    height: 6px;
+}
+.table-block_own {
+    position: absolute;
+    /* transform: translate(50%, 50%); */
+    top: -10px;
+    left: 0px;
+    width: 6px;
+    height: 6px;
+}
+.pic {
+    width: 100%;
+    height: 100%;
+}
+.fa-minus-circle {
+    margin-left: 40px;
+}
+.table-name {
+    width: 360px;
+}
+.table-color {
+    width: 130px;
+}
+.table-price {
+    width: 70px;
 }
 .button {
     background-color: #f5f5f5;
     width: 70px;
-    height: 22px;
+    height: 23px;
     color: #b0b0b0;
-    font-size: 10px;
-    padding: 5px;
+    font-size: 13px;
+    color: #646464;
     cursor: pointer;
+    border-radius: 2px;
+    border: 1px #d8d8d8 solid;
+    /* display: block; */
+    text-align: center;
+}
+.button_open {
+    margin-bottom: 6px;
+    margin-left: 8px;
 }
 .icon {
     color: #dc634e;
 }
+/* .del-icon {
+    width: 15px;
+    height: 15px;
+} */
 .add {
     border: 1px solid grey;
     flex-direction: column;
@@ -26,7 +133,9 @@ th, td {
     background-color: #ffffff;
     border-radius: 5px;
     text-align: center;
-    position: relative;
+    position: absolute;
+    top: 10px;
+    left:140px;
 }
 .input {
 /* margin-left: auto; */
@@ -48,7 +157,7 @@ margin-right: auto;
 }
 .error {
     color: red;
-    font-weight: bold;
+    font-weight: 400;
     /* margin-top: 20px; */
 }
 .button-block {
@@ -60,9 +169,20 @@ margin-right: auto;
     margin-left: 10px;
 }
 .container {
-    width: 680px;
+    width: 100%;
+    border-left: 1px #e9e9e9 solid;
+    border-right: 1px #e9e9e9 solid;
+
 }
 .close {
     position: absolute;
     left: 95%;
+}
+.container {
+    position: relative;
+}
+.add_title {
+    font-weight: 500;
+    color: #646464;
+    font-size: 20px;
 }
