--- a/src/Components/List.css
+++ b/src/Components/List.css
@@ -3,10 +3,8 @@
     border-collapse: collapse;
     line-height: 1.42;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-
 }
 .table {
-    /* border: 1px black solid; */
     width: 100%;
 }
 .table-head {
@@ -14,28 +12,19 @@
     text-align: left;
     color: #646464;
     font-size: 13px;
-    
 }
 th {
     border: 1px #cfcfcf solid;
     padding-left: 10px;
     font-weight: normal;
-    
 }
 .head-check {
-    /* display: block; */
     padding-left: 16px;
-    /* float: right; */
     width: 120px;
-
 }
 .tab-check {
     float: left;
     display: block;
-    /* display: flex;
-    flex-wrap: wrap; */
-    /* justify-content: flex-start; */
-    /* margin-left: 38px; */
     margin-left: 21px;
 }
 .table-row {
@@ -56,22 +45,15 @@ th {
 .table-check {
     display: flex;
     margin-left: 33px;
-    /* justify-content: center; */
     padding-top: 5px;
     padding-left: 0;
-
 }
-/* td {
-    border: 1px black solid;
-    padding: 10px;
-} */
 .tab-block {
     position: relative;
     width: 100%;
 }
 .table-block {
     position: absolute;
-    /* transform: translate(50%, 50%); */
     top: -10px;
     left: -10px;
     width: 6px;
@@ -79,7 +61,6 @@ th {
 }
 .table-block_own {
     position: absolute;
-    /* transform: translate(50%, 50%); */
     top: -10px;
     left: 0px;
     width: 6px;
@@ -104,15 +85,16 @@ th {
 .button {
     background-color: #f5f5f5;
     width: 70px;
-    height: 23px;
+    height: 24px;
     color: #b0b0b0;
     font-size: 13px;
     color: #646464;
     cursor: pointer;
     border-radius: 2px;
     border: 1px #d8d8d8 solid;
-    /* display: block; */
     text-align: center;
+    letter-spacing: 0px;
+    padding-top: 2px;
 }
 .button_open {
     margin-bottom: 6px;
@@ -121,15 +103,11 @@ th {
 .icon {
     color: #dc634e;
 }
-/* .del-icon {
-    width: 15px;
-    height: 15px;
-} */
 .add {
     border: 1px solid grey;
     flex-direction: column;
     width: 400px;
-    height: 290px;
+    height: 300px;
     background-color: #ffffff;
     border-radius: 5px;
     text-align: center;
@@ -138,7 +116,6 @@ th {
     left:140px;
 }
 .input {
-/* margin-left: auto; */
 margin-right: 30px;
 width: 200px;
 }
@@ -158,7 +135,6 @@ margin-right: auto;
 .error {
     color: red;
     font-weight: 400;
-    /* margin-top: 20px; */
 }
 .button-block {
     display: flex;
@@ -172,7 +148,6 @@ margin-right: auto;
     width: 100%;
     border-left: 1px #e9e9e9 solid;
     border-right: 1px #e9e9e9 solid;
-
 }
 .close {
     position: absolute;
@@ -186,3 +161,17 @@ margin-right: auto;
     color: #646464;
     font-size: 20px;
 }
+.text {
+    font-size: 16px;
+}
+.input_price::-webkit-outer-spin-button,.input_price::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.input_price {
+    -moz-appearance: textfield;
+}
+/* .input_price::-webkit-inner-spin-button,.input_price::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+} */
